--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
     "@prisma/client": "^4.16.1",
-    "express": "^4.18.2"
+    "convert-excel-to-json": "^1.7.0",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "node-xlsx": "^0.23.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "prisma": "^4.16.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
