--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "dependencies": {
     "@prisma/client": "^4.16.1",
     "convert-excel-to-json": "^1.7.0",
+    "core-js": "^3.26.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "node-xlsx": "^0.23.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
     "prisma": "^4.16.1",
