--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "@types/multer": "^1.4.7",
     "prisma": "^4.16.1",
     "ts-node-dev": "^2.0.0",
+    "tsup": "^7.2.0",
     "typescript": "^5.1.3"
   },
   "name": "costs",
   "version": "1.0.0",
   "main": "server.ts",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "build": "tsup src",
+    "start": "node dist/server.js"
   },
   "author": "Jairo Santos",
   "license": "ISC",
