--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "build": "tsup src",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "vercel-build": "npx prisma migrate deploy"
   },
   "author": "Jairo Santos",
   "license": "ISC",
