--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "build": "tsup src",
+    "build": "tsup src npx prisma migrate generate",
     "start": "node dist/server.js",
     "vercel-build": "npx prisma migrate deploy"
   },
